2007-06-08  Florian Boor <florian.boor@kernelconcepts.de>

	* Release version 0.32
	* Remove debian directory from distribution.
	* Add pot file to distribution.

2007-05-13 Philippe De Swert <philippedeswert@scarlet.be>

	* Apply patches from bugzilla submitted by Neil Williams
		- http://bugs.linuxtogo.org/show_bug.cgi?id=47
		- http://bugs.linuxtogo.org/show_bug.cgi?id=48
		- http://bugs.linuxtogo.org/show_bug.cgi?id=49
		- http://bugs.linuxtogo.org/show_bug.cgi?id=50
	* Remove debian subdir for easier maintance in debian
		Closes: http://bugs.linuxtogo.org/show_bug.cgi?id=51

2006-07-11  Florian Boor <florian.boor@kernelconcepts.de>

	* Release version 0.31
	* Some more dist fixes: Make sure the correct files are shipped and
	  i18n stuff gets updated.
	* Some fixes to pass distcheck
	* Prepare release 0.31
	* Fix broken desktop file.

2006-07-05  Florian Boor <florian.boor@kernelconcepts.de>

	* Some updates to support Maemo 2.0-

2006-07-04  Florian Boor <florian.boor@kernelconcepts.de>

	* Release version 0.30
	* sql.c: Some formating improvements, remove unused code.
	* ui.c: Make toolbar fit on QVGA portrait screens.
	  Some minor formating improvements.

2006-05-18 Philippe De Swert <philippedeswert@scarlet.be>

	* autogen.sh: added po/Makefile.in.in updating
	* configure.ac: corrected po/Makefile.in problem
	* ui.c: general clean-up (remove unused functions)
	* ui.h: clean-up (see ui.c)
	* Makefile.am: remove html.c and html.h from build as they are unused atm as
		       the html export code is broken

2006-04-19  Florian Boor <florian.boor@kernelconcepts.de>

	* ui.c: Activate journal button only if a task is selected.
	* ui.c, main.c: Shorten labels and increase default window size to
                        make all buttons fit into the window.

2006-04-02  Florian Boor <florian.boor@kernelconcepts.de>

	* ui.c: Make text more consistent, improve usage of stock icons.