@@ -1,3 +1,8 @@
+2007-11-04  Graham Cobb  <g+770@cobb.uk.net>
+
+	* configure.ac, Makefile.am: build and compile
+	changes for new hildon libraries in chinook
+
 2007-06-08  Florian Boor <florian.boor@kernelconcepts.de>
 
 	* Release version 0.32
